--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -24,6 +24,8 @@
             <button type="submit">Guardar cambios</button>
         </form>
         <a class="cambioContra" href="/users/password/<%=usuario.id%>"> <h3>Cambiar contraseña</h3> </a>
+        <a class="cambioContra" href="/users/historialCompras/<%=usuario.id%>"> <h3>Historial de compras</h3> </a>
+        <a class="cambioContra" href="/users/destroy/<%=usuario.id%>"> <h3 style="color: red;">ELIMINAR CUENTA</h3> </a>
 </div> 
 </main>
 <%-include('../partials/footer')%>
