--- a/cloverbazar/public/stylesheets/contacto.css
+++ b/cloverbazar/public/stylesheets/contacto.css
@@ -3,6 +3,10 @@ body{
     padding: 0;
     box-sizing: border-box;
     font-family: 'Libre Franklin', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
 main{
