--- a/cloverbazar/public/stylesheets/forms.css
+++ b/cloverbazar/public/stylesheets/forms.css
@@ -6,8 +6,13 @@
 
 main{
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 50px;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
 }
 
 h2{
