--- a/cloverbazar/public/stylesheets/mayorista.css
+++ b/cloverbazar/public/stylesheets/mayorista.css
@@ -1,3 +1,10 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
 main {
     display: flex;
     flex-flow: column wrap;
