--- a/cloverbazar/public/stylesheets/product.css
+++ b/cloverbazar/public/stylesheets/product.css
@@ -2,9 +2,13 @@
     box-sizing: border-box;
 }
 body{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
     font-family: 'Libre Franklin', sans-serif;
 }
+
 main section{
     display: flex;
     flex-wrap: wrap;
