--- a/cloverbazar/public/stylesheets/productRubro.css
+++ b/cloverbazar/public/stylesheets/productRubro.css
@@ -2,7 +2,10 @@
     box-sizing: border-box;
 }
 body{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
     font-family: 'Libre Franklin', sans-serif;
 }
 main section.rubros{
