--- a/cloverbazar/public/stylesheets/forms.css
+++ b/cloverbazar/public/stylesheets/forms.css
@@ -30,6 +30,7 @@ form.forms{
     color: rgb(46, 46, 46);
     text-align: center;
     border-radius: 20px;
+    margin-bottom: 10px;
 }
 
 
@@ -117,6 +118,17 @@ a.cambioContra{
     color: rgb(46, 46, 46);
     font-size: 14px;
 }
+form div.passwordError{
+    font-size: 12px;
+}
+
+ul.historial{
+    padding: 0px;
+}
+ul.historial li{
+    list-style: none;
+
+}
 
 @media(min-width: 768px){
     form{
@@ -133,4 +145,10 @@ a.cambioContra{
         align-items: center;
         height: 150px;
     }
+    main form button:hover{
+        background-color:rgb(100, 100, 100);
+        cursor: pointer;
+       
+    }
+    
 }
