--- a/cloverbazar/views/products/productListInactivos.ejs
+++ b/cloverbazar/views/products/productListInactivos.ejs
@@ -14,6 +14,7 @@
             <p>$<%=productos[i].precio%></p>
             <p><%=productos[i].descuento%>%</p>
             <a href="/products/edit/<%=productos[i].id%>" class="links">EDITAR</a>
+            <a href="/products/activar/<%=productos[i].id%>" class="links">ACTIVAR</a>
         </article>
         <%  } %>
     </section>
