--- a/cloverbazar/views/partials/header.ejs
+++ b/cloverbazar/views/partials/header.ejs
@@ -51,7 +51,7 @@
             <% } %>
             <%if(!locals.isAuthenticated) {%>
                 <!-- Trigger/Open The Modal -->
-                <button id="myBtn">
+                <button id="myBtn" class="btn">
                  
                         <div class="cart">
                             <i class="fas fa-shopping-cart"></i>
