--- a/cloverbazar/views/carts/productCart.ejs
+++ b/cloverbazar/views/carts/productCart.ejs
@@ -40,9 +40,9 @@
             </div>
         </form>
         <% } else { %>
-            <h2>No hay productos para mostrar</h2>
-            <a href="/products/rubro">Ir a Productos</a>
+                <h2 style="margin-bottom: 50px;">No hay productos para mostrar</h2>
+                <a href="/products/rubro" class="link-productos">Ir a Productos</a>
         <% } %>
     </section>
-<link rel="stylesheet" href="/stylesheets/forms.css">
+</main>
 <%-include('../partials/footer')%>
