--- a/cloverbazar/public/stylesheets/faqs.css
+++ b/cloverbazar/public/stylesheets/faqs.css
@@ -1,3 +1,10 @@
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
 main {
     margin: 15px;
     padding: 15px 20px;
