--- a/cloverbazar/views/products/productDetail.ejs
+++ b/cloverbazar/views/products/productDetail.ejs
@@ -1,6 +1,7 @@
-<link rel="stylesheet" href="/stylesheets/productDetail.css">
 <script src="/js/avisoLogin.js"></script>
-<link rel="stylesheet" href="/stylesheets/modals.css">
+
+<link rel="stylesheet" href="/stylesheets/productDetail.css">
+
 
 <%-include('../partials/header', {title: producto.nombre})%>
 <main>
@@ -8,12 +9,13 @@
         <%for(let i = 0 ; i < producto.imagenes.length ; i++) {%>
         <article class="image">
             <img src="/images/products/<%=producto.imagenes[i].ruta%>" alt="Imagen del producto <%=producto.nombre%>">
-            <div>
-                <h1 class="nombreprod"> <%=producto.nombre%></h1>
+            <div class="contenedorDetalles">
+                <h2 class="nombreprod"> <%=producto.nombre%></h2>
                 <% if(producto.descuento>0){ %>
-                <h1 class="precioprod"> <span class="tachado">$<%=producto.precio%> </span> <span>$<%=(producto.precio * (1-(producto.descuento)/100))%></span></h1>
+                <h2 class="precioprod"> <span class="tachado">$<%=producto.precio%> </span>
+                    <span>$<%=(producto.precio * (1-(producto.descuento)/100))%></span></h2>
                 <%} else {%>
-                <h1 class="precioprod"> $ <%=producto.precio%></h1>
+                <h2 class="precioprod"> $ <%=producto.precio%></h2>
                 <%} %>
                 <form action="/carts/agregar/<%=producto.id%>" method="POST" class="agregar-al-carrito">
                     <%if(producto.stock > 5){%>
@@ -33,32 +35,29 @@
                             <p style="color:red">Sin stock</p>
                             <%}%>
                     <% } %>
-                    <%if(producto.stock > 0){%>
-                        <%if(locals.isAuthenticated){%>
-                        <button type="submit">Agregar al carrito</button>
-                        <% } %>
-                    <% } %>
+                            <%if(producto.stock > 0){%>
+                            <%if(locals.isAuthenticated){%>
+                            <button type="submit">Agregar al carrito</button>
+                            <% } else {%>
+                            <button class="add2" type="button" id="myBtn-login"> Agregar al carrito</button>
+
+                            <div id="myModal-login" class="modal-login">
+
+                                <!-- Modal content -->
+                                <div class="modal-content">
+                                    <span class="close-login">&times;</span>
+                                    <p>Debes loguearte para continuar</p>
+                                    <a href="/users/login">Iniciar sesion</a>
+                                </div>
+
+                            </div>
+                            <% } } %>
                 </form>
 
             </div>
-                       
+
         </article>
         <% } %>
-        <%if(!locals.isAuthenticated){%>
-            <button id="myBtn-login"> Agregar al carrito</button>
-            
-            <div id="myModal-login" class="modal-login">
-
-                <!-- Modal content -->
-                <div class="modal-content">
-                    <span class="close-login">&times;</span>
-                    <p>Debes loguearte para continuar</p>
-                    <a href="/users/login">Iniciar sesion</a>
-                </div>
-
-            </div>
-           
-            <% } %> 
         <article class="detail">
             <p>Detalles del producto </p>
             <ul>
@@ -80,15 +79,16 @@
                 <h4><span class="producto"> <%=productos[i].nombre%></span>
                     <%if( productos[i].descuento > 0) {%>
                     <h4 class="precio ">
-                        <span class="tachado">$<%=productos[i].precio%> </span> <span>$<%=(productos[i].precio * (1-(productos[i].descuento)/100))%></span>
-                     </h4>
-                        <% } else{ %>
-                            <h4 class="precio">
-                                $<%=productos[i].precio%>
-                             </h4>   
-                            <% }%>
+                        <span class="tachado">$<%=productos[i].precio%> </span>
+                        <span>$<%=(productos[i].precio * (1-(productos[i].descuento)/100))%></span>
                     </h4>
-              
+                    <% } else{ %>
+                    <h4 class="precio">
+                        $<%=productos[i].precio%>
+                    </h4>
+                    <% }%>
+                </h4>
+
 
             </article>
         </a>
