--- a/cloverbazar/public/stylesheets/contacto.css
+++ b/cloverbazar/public/stylesheets/contacto.css
@@ -51,12 +51,11 @@ main{
 }
 
 .formulario-contacto button{
-    width: 30%;
+    width: 25%;
     border: 0;
+    background-color:  rgb(46, 46, 46);
     border-radius: 5px;
-    margin: 5px 0;
-    font-family: 'Libre Franklin', sans-serif;
-    padding: 10px;
+    padding: 15px;
     color: #fbdcc4;
     background-color: rgb(46, 46, 46);
 }
