--- a/cloverbazar/public/stylesheets/forms.css
+++ b/cloverbazar/public/stylesheets/forms.css
@@ -87,13 +87,20 @@ form.forms input:first-child{
 }
 
 form.forms button{
+    /* asi estaba antes
     margin: 10px 20px 20px 20px;
     padding: 10px;
     border: none;
     border-radius: 5px;
     width: 150px;
     background-color: rgb(46, 46, 46);
+    color: #fbdcc4;*/
+    border: 0;
+    background-color:  rgb(46, 46, 46);
+    border-radius: 5px;
+    padding: 15px;
     color: #fbdcc4;
+    background-color: rgb(46, 46, 46);
 }
 
 form.forms a{
