--- a/cloverbazar/public/stylesheets/header.css
+++ b/cloverbazar/public/stylesheets/header.css
@@ -71,10 +71,10 @@ font-size: 30px;
 header div.loginButton button{
     border: 0;
     background-color:  rgb(46, 46, 46);
-    color: white;
     border-radius: 5px;
-    /*cambio 6*/
     padding: 15px;
+    color: #fbdcc4;
+    background-color: rgb(46, 46, 46);
 
 }
 
