--- a/cloverbazar/public/stylesheets/index.css
+++ b/cloverbazar/public/stylesheets/index.css
@@ -105,10 +105,9 @@ main section form textarea{
 main section form button{
     width: 95px;
     border: 0;
+    background-color:  rgb(46, 46, 46);
     border-radius: 5px;
-    margin: 5px 0;
-    font-family: 'Libre Franklin', sans-serif;
-    padding: 5px;
+    padding: 15px;
     color: #fbdcc4;
     background-color: rgb(46, 46, 46);
 }
