--- a/cloverbazar/public/stylesheets/productDetail.css
+++ b/cloverbazar/public/stylesheets/productDetail.css
@@ -41,7 +41,6 @@ main section article.image h1.precioprod {
 main section.detalleprod form.agregar-al-carrito button {
     width: 170px;
     border: 0;
-    background-color:  rgb(46, 46, 46);
     border-radius: 5px;
     padding: 15px;
     color: #fbdcc4;
@@ -73,6 +72,17 @@ main section article.detail li {
     list-style: none;
     font-size: 14px;
 }
+main section article form select{
+    padding: 10px;
+    background-color: rgb(46, 46, 46);
+    color: #fbdcc4;
+    border-radius: 5px;
+} 
+
+main section article form select:hover{
+    cursor:pointer;
+    background-color: rgb(100,100,100);
+}
 
 main section.relacionados {
     display: flex;
@@ -103,7 +113,6 @@ main section.relacionados a {
 
 .add2{
     padding: 10px;
-    color: blue
 }
 
 
@@ -131,6 +140,11 @@ main section.relacionados a {
         margin-right: 10px;
         color: rgb(100, 100, 100)
     }
+    main section.detalleprod form.agregar-al-carrito button:hover {
+        background-color: rgb(100,100,100);
+        cursor:pointer;
+    }
+  
 
 
 @media(min-width: 1024px) {
